Fixes #670 for scale factors < 2.0, fixes #675 (workaround), reduces code warnings